--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset = "UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CQ</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -180,15 +180,15 @@
         <div id="adduser_heading"><h1>Add User</h1></div>
         <div id="adduser_form_div">
             <form>
-                <input type="text"  id="name" required name="name" placeholder="Name">
-                <input type="text" id="email" required name="email" placeholder="Email">
-                <input type="text" id="password" required name="password" placeholder="User Password">
-                <input type="number" id="phoneno" required name="phoneno" placeholder="Phone">
-                <input type="text" id="city" required name="city" placeholder="City">
+                <input type="text"  id="name"  name="name" placeholder="Name" >
+                <input type="text" id="email" name="email" placeholder="Email">
+                <input type="text" id="password" name="password" placeholder="User Password">
+                <input type="number" id="phoneno" name="phoneno" placeholder="Phone">
+                <input type="text" id="city" name="city" placeholder="City">
                 <h3><label>Role:</label></h3>
                 <select id="selectrole" name="role">
                     <option selected="true" disabled="disabled">Select User Role</option>
-                    <option value="user">User</option>
+                    <option value="user" selected>User</option>
                     <option value="communitybuilder">Community Builder</option>
                     <option value="admin">Admin</option>
                 </select>
@@ -248,7 +248,7 @@
 
     add_user_button.addEventListener("click",function(event){
     });
-    
+
 
     change_password_button.addEventListener('click',function(event){
         window.location = '/changePassword';
@@ -288,13 +288,28 @@
     add_user_button.addEventListener('click',function(){
         var userData = new Object();
         userData.name = document.getElementById('name').value;
+        if(userData.name==='')
+        {
+          alert("Name is Empty");
+          return;
+        }
         userData.email = document.getElementById('email').value;
+        if(userData.email==='')
+        {
+          alert("Email is Empty");
+          return;
+        }
         userData.password = document.getElementById('password').value;
+        if(userData.password==='')
+        {
+          alert("Password is Empty");
+          return;
+        }
         userData.phoneno = document.getElementById('phoneno').value;
         userData.city = document.getElementById('city').value;
         userData.role = document.getElementById('selectrole').value;
         userData.status = 'pending';
-        userData.flag = 0;
+        userData.flag = 1;
         var request = new XMLHttpRequest();
         request.open('POST','/<%= data[0].role%>/adduser');
         request.setRequestHeader('Content-Type','application/json');
