--- a/views/communitypanel.ejs
+++ b/views/communitypanel.ejs
@@ -289,7 +289,7 @@
                       <% if(d.membershiprule == "direct"){ %>
                         <button class = "btn2" id="manage_Community"><a href="/community/manageCommunity/<%=d._id%>"><i class="fas fa-cogs fa-sm"></i></a></button>
                         <% } else{ %>
-                        <button class = "btn3" id="cancel_Community"><a href="#"><i class="fas fa-times settingIcon fa-lg" ></i></a></button>
+                        <form  method="POST" action="/deleteCommunity"><button class = "btn3" id="cancel_Community"><i class="fas fa-times settingIcon fa-lg" ></i></button></form>
                         <% } %>
                     </div>
             </div>
@@ -327,7 +327,7 @@
       $("#sideBtn").click(function(){
          if($("#menu").width() == 50){
             $("#menu").animate({width: '250px'},300);
-            $("#body_internal_div").animate({left:'24%'},300);
+            $("#body_internal_div").animate({left:'30%'},300);
             $("#community_header_div").animate({'padding-left':'250px'},300);
          } else{
             $("#menu").animate({width: '50px'},300);
