--- a/views/communitypanel.ejs
+++ b/views/communitypanel.ejs
@@ -219,7 +219,7 @@
             padding: 0;
             margin: 0;
             margin-top: 25px;
-            color: #337ab7;;
+            color: #337ab7;
             font-weight: 600;
             text-decoration: none;
             word-wrap: break-word;
@@ -289,7 +289,7 @@
                       <% if(d.membershiprule == "direct"){ %>
                         <button class = "btn2" id="manage_Community"><a href="/community/manageCommunity/<%=d._id%>"><i class="fas fa-cogs fa-sm"></i></a></button>
                         <% } else{ %>
-                        <form  method="POST" action="/deleteCommunity"><button class = "btn3" id="cancel_Community"><i class="fas fa-times settingIcon fa-lg" ></i></button></form>
+                        <form  method="POST" action="/deleteCommunity/<%=d._id%>"><button class = "btn3" id="cancel_Community"><i class="fas fa-times settingIcon fa-lg" ></i></button></form>
                         <% } %>
                     </div>
             </div>
