--- a/views/communitypanellist.ejs
+++ b/views/communitypanellist.ejs
@@ -114,16 +114,9 @@
             left: 18%;
             top: 15%;
             width: 60%;
-            height: 550px;
-        }
-        .btn{
-            background: transparent;
-            border: 1px solid #fff;
-            width: 50px;
-            color: #fff;
-            cursor: pointer;
-            margin-left: 10px;
-            margin-top: 2px;
+            padding-bottom: 10%;
+            box-sizing: border-box;
+            /* height: 550px; */
         }
         #community_header_div button i {
             padding: 0;
@@ -170,250 +163,261 @@
           margin-bottom: 12px;
           height:40px;
 }
-.community_div_class{
-    padding:0;
-    margin: 0;
-    background-color: #fff;
-    padding: 15px;
-    padding-bottom: 120px;
-    border: 1px solid rgb(200,200,200);
-    border-radius: 5px;
-    margin-top: 20px;
-    margin-bottom:15px;
-}
-.community_image_div_class{
-    width: 15%;
-    float:left;
-}
-.community_image_class{
-    height: 70px;
-    width: 70px;
-    border: 3px solid rgb(235, 235, 235);
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
-    background-color: #fff;
-}
-.community_name_div_class{
-    border: 0;
-    font-weight: bold;
-    word-wrap: break-word;
-    font-size: 17px;
-    padding: 12px 0 0 0;
-    outline: none !important;
-    background-color: rgba(0, 0, 0, 0);
-    width: 30%;
-    float: left;
-}
-.joinbtn{
-    padding: 5px 10px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
-    display: inline-block;
-    padding: 6px 12px;
-    margin-bottom: 0;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.42857143;
+#border1
+{
+    padding-top: 60px;
+    position: static;
     text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #2e6da4;
-    border: 0px;
-    float: right;
-    margin-top: 15px;
-    margin-right: 20px;
+    background-color: #3ea7c1;
+    overflow: auto;
+    transition: .3s ease;
 }
-.community_lower_div_class{
-    width: 100%;
+
+
+#myCommList
+{
+    background-color: cornflowerblue;
+}
+
+#communityBar
+{
+    height: 53px;
+    background-color: #3ea7c1;
+}
+
+#reload
+{
+  background: transparent;
+  border: 1px solid #fff;
+  width: 50px;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 5px;
+  margin-left: 3.5%;
+  float:left;
+}
+
+#searchCommunity
+{
+  background: transparent;
+  border: 1px solid #fff;
+  width: 50px;
+  color: #fff;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-top: 5px;
+  float: left;
+}
+
+.communityDiv
+{
+    width: 80%;
+    margin-top: 20px;
+    background-color: white;
+    display: inline-table;
+    height: 135px;
+    box-shadow: 0 3px 10px 0 rgba(147, 176, 180, 0.55);
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+.communityDivImage
+{
+    height: 80px;
+    width: 80px;
     float: left;
-    padding: 0;
-    margin: 0;
-    font-weight: 600;
-    color: #7D7D7D;
-    text-decoration: none;
-    word-wrap: break-word;
-    text-transform: capitalize;
+    margin-left: 20px;
+    margin-top: 10px;
+    border: 2px solid #212121;
 }
-.description_div_class{
-    border: 0;
-    word-wrap: break-word;
-    font-size: 12px;
-    color: rgb(170, 170, 170);
-    outline: none !important;
-    background-color: rgba(0, 0, 0, 0)
+
+.communityDivButton
+{
+    margin-right: 15px;
+    margin-top: 50px;
+    float: right;
+    width:70px;
+    height: 40px;
+    color: white;
+    background-color: #337ab7;
+    border: 1px solid #212121;
 }
-#community_panel{
-  margin-top:5px;
+
+.communityDivLabel
+{
+    padding-left: 20px;
+    text-align: left;
+    float: left;
+    width: 100%;
+    color: #337ab7;
 }
-a:link{
-  color:#337ab7;
-  text-decoration: none;
-}
-a:visited{
-  color:#337ab7;
-  text-decoration: none;
-}
-a:hover{
-  color:black;
-  text-decoration: none;
+.communityDivLabel2
+{
+    padding-left: 20px;
+    text-align: left;
+    float: left;
+    width: 100%;
 }
     </style>
 </head>
 <body>
     <% include partials/menu.html %>
-    <div id="community_header_div">
-        <button class="btn" id="community_panel"><i class="fa fa-group"></i></button>
-        <button class="btn" id="search_community_panel"><i class="fa fa-search"></i></button>
-        <input type="text" id="search_input" placeholder="Search Community...">
+    <div id="border1" style="padding-left: 50px;">
+    <div id="communityBar">
+        <button id="reload">
+            <i class="fa fa-group"
+               style="transform: translateX(-10%)"></i>
+        </button>
+        <button id="searchCommunity">
+            <i class="fa fa-search"
+               style="transform: translateX(-10%)"></i>
+        </button>
+
     </div>
     <div id="body_internal_div">
-        <%communtiydata.forEach(d => {%>
-        <div class="community_div_class">
-            <div class="community_upper_div">
-                <div class="community_image_div_class"><img src="/<%=d.image%>" class="community_image_class"></div>
-                <div class="community_name_div_class"><a href="/community/communityprofile/<%=d._id%>"><%=d.comname%></a></div>
-                <button class="joinbtn" id="<%=d._id%>" value="<%=d.communitymembers%>">
-                        <% if(d.membershiprule == "direct"){ %>
-                            Join
-                        <% } else{ %>
-                            Ask To Join
-                        <% } %>
-                </button>
-            </div>
-            <div class="community_lower_div_class">
-                <div class="members_div_class"><%=d.communitymembers%> Members</div>
-                <div class="description_div_class"><%=d.communitydescription%></div>
-            </div>
-        </div>
-        <%})%>
     </div>
-</body>
-<script>
-    console.log('<%= data[0].role%>');
-    var menu = document.getElementById("menu");
-    var sideBtn = document.getElementById("sideBtn");
-    var body_internal_div = document.getElementById("body_internal_div");
-    var span = menu.getElementsByTagName("span");
-    var communtiydata = <%-JSON.stringify(communtiydata)%>;
+  </body>
+  <script>
+  console.log('<%= data[0].role%>');
+  var menu = document.getElementById("menu");
+  var sideBtn = document.getElementById("sideBtn");
+  var body_internal_div = document.getElementById("body_internal_div");
+  var span = menu.getElementsByTagName("span");
+  var communtiydata = <%-JSON.stringify(communtiydata)%>;
 
-    var div = menu.getElementsByTagName('div');
-    for(var i=0;i<div.length;i++){
-        div[i].classList.remove("active");
-    }
-    var create=document.getElementById("createCommunity");
-    div[2].classList.add("active");
+  var div = menu.getElementsByTagName('div');
+  for(var i=0;i<div.length;i++){
+      div[i].classList.remove("active");
+  }
+  var create=document.getElementById("createCommunity");
+  div[2].classList.add("active");
 
-    var community_header_div = document.getElementById("community_header_div");
-
-    var search_button=document.getElementById("search_community_panel");
-    search_button.addEventListener('click',function(event){
-      window.location = '/communtiy/communitypanellist'
+  $(document).ready(function(){
+    $("#sideBtn").click(function(){
+       if($("#menu").width() == 50){
+          $("#menu").animate({width: '250px'},300);
+          $("#body_internal_div").animate({left:'30%'},300);
+       } else{
+          $("#menu").animate({width: '50px'},300);
+          $("#body_internal_div").animate({left:'18%'},300);
+       }
     });
-    var community_panel=document.getElementById("community_panel");
-    community_panel.addEventListener('click',function(event){
-      window.location = '/communtiy/communitypanel'
-    });
-    $(document).ready(function(){
-      $("#sideBtn").click(function(){
-         if($("#menu").width() == 50){
-            $("#menu").animate({width: '250px'},300);
-            $("#body_internal_div").animate({left:'30%'},300);
-            $("#community_header_div").animate({'padding-left':'250px'},300);
-         } else{
-            $("#menu").animate({width: '50px'},300);
-            $("#body_internal_div").animate({left:'18%'},300);
-            $("#community_header_div").animate({'padding-left':'100px'},300);
+ });
+ document.getElementById('reload').onclick = function ()
+ {
+     window.location.replace('/communtiy/communitypanel');
+ };
+
+ document.getElementById('searchCommunity').onclick = function ()
+ {
+     window.location.replace('/communtiy/communitypanellist');
+ };
+
+ let list = document.getElementById("body_internal_div");
+ let flag = false;
+ let skip = 0;
+ let requestFlag = false;
+ function loadCommunities()
+ {
+     if(requestFlag === true)
+         return;
+     requestFlag = true;
+     let request = new XMLHttpRequest();
+     request.addEventListener('load', function ()
+     {
+         if(request.responseText === 'ERROR')
+         {
+             alert('ERROR');
+             requestFlag = false;
          }
-      });
-   });
-
-   var search_input=document.getElementById('search_input');
-   search_input.addEventListener('keyup',function(){
-        body_internal_div.innerHTML = "";
-        var search_param = document.getElementById("search_input").value;
-        console.log(search_param);
-        communtiydata.forEach(element=>{
-            if(element.comname.includes(search_param)){
-                console.log(element);
-                addToDom(element);
-            }
-        })
-    });
-
-    function addToDom(element){
-        var listItem1 = document.createElement('div');
-        listItem1.setAttribute("class","community_div_class");
-        var listItem = document.createElement("div");
-        listItem.setAttribute("class","community_upper_div");
-        first_div = document.createElement('div');
-        first_div.setAttribute("class","community_image_div_class");
-        image = document.createElement('img');
-        image.setAttribute("src","/"+element.image);
-        image.setAttribute("class","community_image_class");
-        first_div.appendChild(image);
-        listItem.appendChild(first_div);
-        second_div = document.createElement('div');
-        second_div.setAttribute("class","community_name_div_class");
-        anchor = document.createElement('a');
-        anchor.setAttribute("href","/community/communityprofile/" + element._id);
-        anchor.setAttribute("id",element.comname);
-        anchor.innerHTML = element.comname;
-        second_div.appendChild(anchor);
-        listItem.appendChild(second_div);
-        button = document.createElement('button');
-        button.setAttribute("class","joinbtn");
-        button.setAttribute("id",element._id);
-        if(element.membershiprule == "direct"){
-            button.innerHTML = "Join";
-         } else{
-            button.innerHTML = "Ask To Join";
+         else if(request.responseText === 'DONE')
+         {
+             flag = true;
          }
-        listItem.appendChild(button);
-        listItem1.appendChild(listItem);
-        listItem2 = document.createElement('div');
-        listItem2.setAttribute("class","community_lower_div_class");
-        thirddiv = document.createElement("div");
-        thirddiv.setAttribute("class","members_div_class");
-        thirddiv.innerHTML = element.communitymembers+" Members";
-        listItem2.appendChild(thirddiv);
-        fourdiv = document.createElement('div');
-        fourdiv.setAttribute("class","desription_div_class");
-        fourdiv.innerHTML = element.communitydescription;
-        listItem2.appendChild(fourdiv);
-        listItem1.appendChild(listItem2);
-         body_internal_div.appendChild(listItem1);
-    }
-    var joinbtns = document.getElementsByClassName('joinbtn');
-    for(var i = 0;i<joinbtns.length;i++) {
-        joinbtns[i].addEventListener("click", event => {
-            console.log(event.target.getAttribute("id"));
-            console.log(event.target.innerHTML.trim());
-            event.target.parentNode.parentNode.style.display = "none";
-            var communitytojoin = new Object();
-            communitytojoin.id = event.target.getAttribute("id");
-            communitytojoin.buttontext = event.target.innerHTML.trim();
-            console.log(event.target.getAttribute("id"));
-            communitytojoin.members=parseInt(event.target.getAttribute("value"))+1;
-            console.log(communitytojoin.members);
-            var request = new XMLHttpRequest();
-            request.open('POST','/updateCommunityDetails');
-            request.setRequestHeader("Content-Type","application/json");
-            request.send(JSON.stringify(communitytojoin));
+         else
+         {
+            //  console.log(request.responseText);
+             let communities = JSON.parse(request.responseText);
+             console.log(communities);
+             communities.forEach(function(community)
+             {
+                 let div1 = document.createElement('div');
+                 div1.className = "communityDiv";
 
-            request.onload = function(){
-            var dataReturned = request.responseText;
-            if(dataReturned==""||dataReturned==null){
-            alert('Error in joining Community!!!');
-            }else{
-                console.log(dataReturned);
-                alert('Join Request Submitted!!!');
-                }
-            }
-        })
-    }
-</script>
+                 let div2 = document.createElement('div');
+                 div2.style.height = '100px';
+
+                 let img = document.createElement('img');
+                 img.src = '/'+community.image;
+                 img.className = "communityDivImage";
+                 div2.appendChild(img);
+
+                 let button = document.createElement('button');
+                 button.className = "communityDivButton";
+                 if(community.membershiprule === 'permission')
+                 {
+                     button.innerHTML = 'Ask to join';
+                     button.onclick = function ()
+                     {
+                         let request = new XMLHttpRequest();
+                         request.addEventListener('load', function()
+                         {
+                             if(request.responseText === 'DONE')
+                                 list.removeChild(div1);
+                         });
+                         request.open('POST', '/addRequest');
+                         request.setRequestHeader('Content-type', 'application/json');
+                         request.send(JSON.stringify({communityId: community._id}));
+                     }
+                 }
+                 else
+                 {
+                     button.innerHTML = 'Join';
+                     button.onclick = function ()
+                     {
+                         let request = new XMLHttpRequest();
+                         request.addEventListener('load', function()
+                         {
+                             if(request.responseText === 'DONE')
+                                 list.removeChild(div1);
+                         });
+                         request.open('POST', '/addCommunityUser');
+                         request.setRequestHeader('Content-type', 'application/json');
+                         request.send(JSON.stringify({communityId: community._id}));
+                     }
+                 }
+                 div2.appendChild(button);
+                 div1.appendChild(div2);
+
+                 let label1 = document.createElement('label');
+                 label1.className = "communityDivLabel";
+                 label1.style.fontSize = '18px';
+                 label1.innerHTML = community.comname;
+                 div1.appendChild(label1);
+
+                 let label2 = document.createElement('label');
+                 label2.className = "communityDivLabel2";
+                 label2.innerHTML = community.communitydescription;
+                 div1.appendChild(label2);
+                 list.appendChild(div1);
+             });
+             skip += 7;
+             requestFlag = false;
+         }
+     });
+     request.open('POST', '/getSearchCommunities');
+     request.setRequestHeader('Content-type', 'application/json');
+     request.send(JSON.stringify({skip: skip}));
+ }
+
+ loadCommunities();
+
+ window.onscroll =  function()
+ {
+     if (flag === false && window.pageYOffset + window.innerHeight > list.offsetHeight)
+     {
+         loadCommunities();
+     }
+ };
+  </script>
 </html>
